/*
 * Copyright 2022 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.config;

option java_package = "org.finos.tracdap.config";
option java_multiple_files = true;

import "tracdap/metadata/common.proto";
import "tracdap/config/common.proto";

enum TracServiceKey {

  SERVICE_NOT_SET = 0;

  METADATA = 1;
  DATA = 2;
  ORCHESTRATOR = 3;
  WEB_SERVER = 4;
  GATEWAY = 5;
}

message PlatformConfig {

  map<string, string> config = 1;

  PlatformInfo platformInfo = 2;

  AuthenticationConfig authentication = 5;

  MetadataConfig metadata = 6;

  StorageConfig storage = 7;

  map<string, PluginConfig> repositories = 8;

  PluginConfig executor = 9;

  PluginConfig jobCache = 12;

  map<string, TenantConfig> tenants = 10;

  optional WebServerConfig webServer = 11;

  optional GatewayConfig gateway = 13;

  map<string, ServiceConfig> services = 4;
}


message MetadataConfig {

  PluginConfig database = 1;

  metadata.MetadataFormat format = 2;
}


message TenantConfig {

  optional string defaultBucket = 1;
  optional string defaultFormat = 2;
}


message WebServerConfig {

  bool enabled = 1;
  int32 port = 2;

  PluginConfig contentRoot = 3;
  repeated WebServerRewriteRule rewriteRules = 4;
  repeated WebServerRedirect redirects = 5;
}

message WebServerRewriteRule {

  string source = 1;
  string target = 2;
}

message WebServerRedirect {

  string source = 1;
  string target = 2;
  int32 status = 3;
}

message GatewayConfig {

  uint32 idleTimeout = 1;
  // optional uint32 idle2 = 2;

  repeated RouteConfig routes = 2;
}

message RouteConfig {

  enum Protocol {
    PROTOCOL_NOT_SET = 0;
    HTTP = 1;
    GRPC = 2;
    GRPC_WEB = 3;
    REST = 4;
  }

  message Match {
    string host = 1;
    string path = 2;
  }

  message Target {
    string scheme = 1;
    string host = 2;
    uint32 port = 3;
    string path = 4;
  }

  string routeName = 1;
  Protocol routeType = 2;
  repeated Protocol protocols = 3;

  Match match = 5;
  Target target = 6;
}

message ServiceMap {

  ServiceConfig metadata = 1;
  ServiceConfig data = 2;
  ServiceConfig orchestrator = 3;
  ServiceConfig webServer = 4;
  ServiceConfig gateway = 5;
}

message ServiceConfig {

  optional bool enabled = 1;

  string alias = 2;
  uint32 port = 3;
}
